# skannonser

./: .dockerignore  .env.example  .gitignore  DATA_FOLDER_UPDATE.md  GITHUB_ACTIONS_SETUP.md  Makefile  PRD.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_DEPLOYMENT.md  REORGANIZATION_COMPLETE.md  UPGRADE_SUMMARY.md  check_price_data.py  check_sheet_headers.py  check_sheets_export.py  docker-compose.yml  migrate_pendlevei_to_integer.py  pyproject.toml  readme.md  requirements.txt  test_sanitize.py
config/: domain.toml  verify-allowlist.toml
docker/: Dockerfile  crontab
docs/: INTERACTIVE_MAP_SETUP.md
main/: LOCATION_FEATURES_GUIDE.md  crawl.py  debug.py  export.py  extraction.py  extraction_eiendom.py  extraction_jobs.py  extraction_jobs_FINN.py  extraction_jobs_NAV.py  extraction_rental.py  googleUtils.py  location_features.py  parsing_helpers_jobs.py  parsing_helpers_rental.py  post_process.py  requirements.txt  run_eiendom.py  run_helper.py  run_jobs.py  run_jobs_FINN.py  run_jobs_NAV.py  run_property.py  run_rental.py  setup.py  test.py  update.py
ops/: run_skannonser_daily.sh  run_sold_backlog.sh
scripts/: backfill_dnbeiendom_travel_to_sheet.py  backfill_donor_links.py  backfill_station_transfer.py  check_dnbeiendom_export.py  export_dnbeiendom_to_sheet.py  fill_station_coords_from_api.py  fill_station_travel_from_pdf.py  populate_travel_from_donors.py  sync_dnbeiendom_sheet.py
skannonser/: cli.py  gateway.py  geo.py  http.py  ids.py  nightly.py  notifications.py  pipeline.py  textnorm.py
tests/: test_ad_html_loader.py  test_battery.py  (+8 more)
(+259 files in other folders)
