[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skannonser"
version = "0.1.0"
description = "skannonser rebuilt: Finn/DNB listing scanner"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "pandas>=2.2",
    "google-api-python-client>=2.100",
    "google-auth>=2.20",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
skannonser = "skannonser.cli:main"

[tool.setuptools.packages.find]
include = ["skannonser*"]

[tool.setuptools.package-data]
"skannonser.store" = ["migrations/*.sql"]
"skannonser.web" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests/rebuild"]
